fixed the landmark issues by putting the content in the main tag

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
   </head>
   <body>
-    <section class="container">
+    <main class="container">
       <div class="card sedan">
         <img src="./images/icon-sedans.svg" alt="icon" />
         <h1>Sedans</h1>
@@ -55,9 +55,9 @@
         </p>
         <a href="#">Learn More</a>
       </div>
-    </section>
+    </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       <p>
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
@@ -65,6 +65,6 @@
         >
       </p>
       <p>Coded by <a href="#">Chinedu George Ojimba</a>.</p>
-    </div>
+    </footer>
   </body>
 </html>
